--- a/关系格式化.html
+++ b/关系格式化.html
@@ -296,6 +296,13 @@
     ],
     [
       "540",
+      "519",
+      "前缘",
+      85,
+      "金蝉神魂曾于世间徘徊许久，在目睹群龙飞落的一刹顿悟，自此踏入轮回……然而冥冥之中，消逝的龙族在世间重生。在踏上今生苦行的途中，金蝉又一次见证了“龙”。",
+    ],
+    [
+      "540",
       "136",
       "君主",
       80,
@@ -575,6 +582,13 @@
       "学子",
       20,
       "镜是一柄不断锤炼自己的剑，我从不担心让镜经历失败，每一次失败都令她更加完美。所以我总是派她去执行最危险的任务，给她无穷无尽的危机。",
+    ],
+    [
+      "139",
+      "519",
+      "后辈",
+      10,
+      "化身白龙时，敖隐常因龙威风的外形而被视作天降神物。但睿智的夫子一眼看破他难以掩盖的少年本貌。眼前的幼龙把夫子的记忆带回遥远过去……真怀念那个时候啊。",
     ],
     [
       "522",
@@ -1799,6 +1813,13 @@
       "“那天起……似乎多了种心照不宣的默契……”自从哪吒救了杨戬的狗后，画风似乎从拳头交往朝着奇怪的方向前进了？这大概是男生与男生的友谊吧？",
     ],
     [
+      "180",
+      "519",
+      "交过手的朋友",
+      80,
+      "有些人天生就属于同类。他们骄傲，不肯驯服，不懂这世界所谓的门道，偏要在风雨里横冲直撞——来去证明这个世界，会属于他们。最终，在月光下，他们凭伤痕相认。",
+    ],
+    [
       "178",
       "180",
       "挚友",
@@ -1888,6 +1909,13 @@
       "弟子候选人",
       30,
       "赵怀真幼时为解修行之疑，常去玄都观翻阅道藏，亦常在其后山竹林修炼太极术，曾有一日，忽闻一神秘老者声音，无意间数句闲话，却助他勘破了修行中的关窍。",
+    ],
+    [
+      "148",
+      "519",
+      "无果之盟",
+      20,
+      "在诸神引领的时代，“神职者”姜子牙见证巨龙与世界同行。而今天，再度归来的他正筹谋新的计划，不想竟有龙族重出于世。这曾守护众生的一族，会成为他的助力吗？",
     ],
     [
       "515",
@@ -2304,6 +2332,13 @@
     ],
     [
       "187",
+      "519",
+      "似敌似亲之龙",
+      85,
+      "一条龙，一个神巫。身上却有如此相似的特征，难道真是他所说的“血脉相连”吗？可血脉相连的……就是亲人吗？回忆触痛敖隐。有人曾用生命爱护他，无关血脉。",
+    ],
+    [
+      "187",
       "505",
       "不成器的”后辈“",
       80,
@@ -2338,6 +2373,13 @@
       "鬼谷子对鹿鸟悲剧心生怜悯，将濒死的小鸟改造，并封印了它体内的神巫之力，使它获得新生。然而再次苏醒的小鸟失去光明、翅膀与记忆，并不知晓再造之恩。",
     ],
     [
+      "189",
+      "519",
+      "迷途稚子",
+      70,
+      "向“迷路的老人家问路”后，这位智者不计前嫌为他指路——一条不仅是通往云梦泽的路。让这个跋涉风雨而来的少年，在那一刻，站在了离先祖最近的世界。",
+    ],
+    [
       "182",
       "187",
       "敌人",
@@ -2366,6 +2408,13 @@
       "阿瑶闯进东神城并打碎了宫殿的窗户，用“小蛇”对高高在上的东神打招呼，但东神却没有真的惩治她。这或许是因为两人分别被鬼谷子收为徒弟，姑且算是师出同门吧。",
     ],
     [
+      "505",
+      "519",
+      "“不熟”的人",
+      70,
+      "交换过称号后怎么不算是熟人呢？难道在云梦泽，斗嘴后想把对方的角拆下来的，就不是熟人了吗？——白龙说是，小鹿说不是。",
+    ],
+    [
       "506",
       "505",
       "默默守护之人",
@@ -2385,6 +2434,69 @@
       "未知的重造者",
       80,
       "鬼谷子对鹿鸟悲剧心生怜悯，将濒死的小鸟改造，并封印了它体内的神巫之力，使它获得新生。然而再次苏醒的小鸟失去光明、翅膀与记忆，并不知晓再造之恩。",
+    ],
+    [
+      "506",
+      "519",
+      "天外之客",
+      70,
+      "有人对他们的关系友好程度表示怀疑，认为未知真相前看什么都怀疑的龙，和正在观察对方的神巫怎么能相安无事。对此敖隐说为什么不能，云中君说没什么不能。",
+    ],
+    [
+      "519",
+      "187",
+      "似亲似敌之人",
+      100,
+      "一条龙，一个神巫。身上却有如此相似的特征，难道真是他所说的“血脉相连”吗？可血脉相连的……就是亲人吗？回忆触痛敖隐。有人曾用生命爱护他，无关血脉。",
+    ],
+    [
+      "519",
+      "180",
+      "交过手的朋友",
+      90,
+      "有些人天生就属于同类。他们骄傲，不肯驯服，不懂这世界所谓的门道，偏要在风雨里横冲直撞——来去证明这个世界，会属于他们。最终，在月光下，他们凭伤痕相认。",
+    ],
+    [
+      "519",
+      "506",
+      "萍水之友",
+      80,
+      "有人对他们的关系友好程度表示怀疑，认为未知真相前看什么都怀疑的龙，和正在观察对方的神巫怎么能相安无事。对此敖隐说为什么不能，云中君说没什么不能。",
+    ],
+    [
+      "519",
+      "505",
+      "熟人",
+      70,
+      "交换过称号后怎么不算是熟人呢？难道在云梦泽，斗嘴后想把对方的角拆下来的，就不是熟人了吗？——白龙说是，小鹿说不是。",
+    ],
+    [
+      "519",
+      "189",
+      "“指路”高人",
+      60,
+      "向“迷路的老人家问路”后，这位智者不计前嫌为他指路——一条不仅是通往云梦泽的路。让这个跋涉风雨而来的少年，在那一刻，站在了离先祖最近的世界。",
+    ],
+    [
+      "519",
+      "148",
+      "无果之盟",
+      50,
+      "在诸神引领的时代，“神职者”姜子牙见证巨龙与世界同行。而今天，再度归来的他正筹谋新的计划，不想竟有龙族重出于世。这曾守护众生的一族，会成为他的助力吗？",
+    ],
+    [
+      "519",
+      "139",
+      "前辈",
+      40,
+      "化身白龙时，敖隐常因龙威风的外形而被视作天降神物。但睿智的夫子一眼看破他难以掩盖的少年本貌。眼前的幼龙把夫子的记忆带回遥远过去……真怀念那个时候啊。",
+    ],
+    [
+      "519",
+      "540",
+      "前缘",
+      30,
+      "金蝉神魂曾于世间徘徊许久，在目睹群龙飞落的一刹顿悟，自此踏入轮回……然而冥冥之中，消逝的龙族在世间重生。在踏上今生苦行的途中，金蝉又一次见证了“龙”。",
     ],
     [
       "121",
