--- a/关系格式化.html
+++ b/关系格式化.html
@@ -2339,6 +2339,13 @@
     ],
     [
       "187",
+      "517",
+      "目光短浅的神巫",
+      82,
+      "怀揣不同理念的双方领袖，各不相让，东皇太一嘲笑着巫神祝的愚昧短浅，大司命警惕着全知者的滥用无忌，云梦未来会偏向何方，他们终有一战。",
+    ],
+    [
+      "187",
       "505",
       "不成器的”后辈“",
       80,
@@ -2374,9 +2381,16 @@
     ],
     [
       "189",
+      "517",
+      "后生",
+      70,
+      "鬼谷子是二代神巫老师，祈是二代大司命弟子。祈曾和师父一起见过那睿智的前辈，前辈看着学着成为神巫的少年，只希望祈能走出不一样的路。",
+    ],
+    [
+      "189",
       "519",
       "迷途稚子",
-      70,
+      60,
       "向“迷路的老人家问路”后，这位智者不计前嫌为他指路——一条不仅是通往云梦泽的路。让这个跋涉风雨而来的少年，在那一刻，站在了离先祖最近的世界。",
     ],
     [
@@ -2409,9 +2423,16 @@
     ],
     [
       "505",
+      "517",
+      "无法沟通的人",
+      70,
+      "按辈分，鬼谷子的学生瑶自然该是祈的长辈。鬼谷子曾对瑶说，祈是个好巫，可后来的接触，让瑶只觉得他们就像存在两种语言，祈亦惊异有人竟比恶灵更鬼话连篇。",
+    ],
+    [
+      "505",
       "519",
       "“不熟”的人",
-      70,
+      60,
       "交换过称号后怎么不算是熟人呢？难道在云梦泽，斗嘴后想把对方的角拆下来的，就不是熟人了吗？——白龙说是，小鹿说不是。",
     ],
     [
@@ -2434,6 +2455,13 @@
       "未知的重造者",
       80,
       "鬼谷子对鹿鸟悲剧心生怜悯，将濒死的小鸟改造，并封印了它体内的神巫之力，使它获得新生。然而再次苏醒的小鸟失去光明、翅膀与记忆，并不知晓再造之恩。",
+    ],
+    [
+      "506",
+      "517",
+      "敌对的神巫",
+      75,
+      "全知者和巫神祝的矛盾早已无法调和，他们为各位的理念而战。大司命曾希望同为神巫的云中君能迷途知返，但翔于高空的云中神君，知道自己正飞向何方。",
     ],
     [
       "506",
@@ -2479,24 +2507,66 @@
     ],
     [
       "519",
+      "517",
+      "顽固的值守者",
+      50,
+      "这里，是龙也不能跨越的禁地。可这方越渡生死的大湖下，当真隐藏龙族失落的往事吗？大司命一如往常地沉默着。",
+    ],
+    [
+      "519",
       "148",
       "无果之盟",
-      50,
+      40,
       "在诸神引领的时代，“神职者”姜子牙见证巨龙与世界同行。而今天，再度归来的他正筹谋新的计划，不想竟有龙族重出于世。这曾守护众生的一族，会成为他的助力吗？",
     ],
     [
       "519",
       "139",
       "前辈",
-      40,
+      30,
       "化身白龙时，敖隐常因龙威风的外形而被视作天降神物。但睿智的夫子一眼看破他难以掩盖的少年本貌。眼前的幼龙把夫子的记忆带回遥远过去……真怀念那个时候啊。",
     ],
     [
       "519",
       "540",
       "前缘",
-      30,
+      20,
       "金蝉神魂曾于世间徘徊许久，在目睹群龙飞落的一刹顿悟，自此踏入轮回……然而冥冥之中，消逝的龙族在世间重生。在踏上今生苦行的途中，金蝉又一次见证了“龙”。",
+    ],
+    [
+      "517",
+      "189",
+      "前辈",
+      90,
+      "鬼谷子是二代神巫老师，祈是二代大司命弟子。祈曾和师父一起见过那睿智的前辈，前辈看着学着成为神巫的少年，只希望祈能走出不一样的路。",
+    ],
+    [
+      "517",
+      "505",
+      "鬼话连篇的森民",
+      80,
+      "按辈分，鬼谷子的学生瑶自然该是祈的长辈。鬼谷子曾对瑶说，祈是个好巫，可后来的接触，让瑶只觉得他们就像存在两种语言，祈亦惊异有人竟比恶灵更鬼话连篇。",
+    ],
+    [
+      "517",
+      "519",
+      "顽固的擅闯者",
+      70,
+      "这里，是龙也不能跨越的禁地。可这方越渡生死的大湖下，当真隐藏龙族失落的往事吗？大司命一如往常地沉默着。",
+    ],
+    [
+      "517",
+      "187",
+      "终有一战的敌人",
+      60,
+      "怀揣不同理念的双方领袖，各不相让，东皇太一嘲笑着巫神祝的愚昧短浅，大司命警惕着全知者的滥用无忌，云梦未来会偏向何方，他们终有一战。",
+    ],
+    [
+      "517",
+      "506",
+      "敌对的神巫",
+      50,
+      "全知者和巫神祝的矛盾早已无法调和，他们为各位的理念而战。大司命曾希望同为神巫的云中君能迷途知返，但翔于高空的云中神君，知道自己正飞向何方。",
     ],
     [
       "121",
